Added getScheduleByDiscordSnowflake
